--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "demo",
+  "name": "app",
   "version": "1.0.0",
   "dependencies": {
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "shadow-cljs": "^2.8.52"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "shadow-cljs": "^2.26.5"
   }
 }
